bk_ida/sjengida/g1/nk_attacked
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/nk_attacked/src/attacks.c:761:6: error: use of undeclared identifier 'bishop_o_2'
v3 = bishop_o_2[i]; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/nk_attacked/src/attacks.c:789:6: error: use of undeclared identifier 'knight_o_1'
v8 = knight_o_1; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/nk_attacked/src/attacks.c:796:9: error: use of undeclared identifier 'bishop_o_2'
while ( bishop_o_2 != v8 ); 
        ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/nk_attacked/src/attacks.c:797:6: error: use of undeclared identifier 'rook_o_0'
v9 = rook_o_0; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/nk_attacked/src/attacks.c:823:7: error: use of undeclared identifier 'unk_417470'
if ( &unk_417470 == ( _UNKNOWN *)++v9 ) 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/nk_attacked/src/attacks.c:829:7: error: use of undeclared identifier 'bishop_o_2'
v18 = bishop_o_2[j]; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/nk_attacked/src/attacks.c:857:7: error: use of undeclared identifier 'knight_o_1'
v23 = knight_o_1; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/nk_attacked/src/attacks.c:864:16: error: use of undeclared identifier 'bishop_o_2'
while ( v23 != bishop_o_2 ); 
               ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/nk_attacked/src/attacks.c:865:7: error: use of undeclared identifier 'rook_o_0'
v24 = rook_o_0; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/nk_attacked/src/attacks.c:891:30: error: use of undeclared identifier 'unk_417470'
if ( ++v24 == ( const int *)&unk_417470 ) 
                             ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/nk_attacked/src/obj/attacks.o] Error 1
